--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a {
   src: url(../assets/fonts/montserrat/Montserrat-Bold.ttf);
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
 }
 
 @font-face {
@@ -36,6 +37,7 @@ a {
   src: url(../assets/fonts/raleway/static/Raleway-Regular.ttf);
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
 }
 
 :root {
@@ -159,7 +161,7 @@ section:nth-child(odd) {
 #container-menu #menu-logo:hover,
 footer a:hover,
 .title-card a:hover,
-#contato a:hover {
+#contato a:hover, .container-accordion li a:hover {
   color: #707070;
 }
 
@@ -311,6 +313,69 @@ footer a:hover,
   }
 }
 
+#container-educacao{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.educacao{
+  display: flex;
+  flex-direction: column;
+}
+
+.container-item{
+  margin-left: 30px;
+  margin-right: 30px;
+  flex: 0 0 calc(100% - 60px);
+}
+
+.container-item .accordion-title{
+  color: var(--color-text);
+  font-family: 'Montserrat';
+  font-size: var(--fs-text-1);
+  margin-bottom: 24px;
+}
+
+.container-item + .container-item{
+  margin-top: 35px;
+}
+
+
+.container-accordion li + li{
+  margin-top: 24px;
+}
+
+.container-accordion li,.container-accordion li a{
+  color: var(--color-text);
+  font-family: 'Raleway';
+  font-size: var(--fs-text-2);
+  transition: .1s color;
+  line-height: 1.4;
+}
+
+@media (min-width:900px){
+  .educacao{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 30px;
+    gap: 30px;
+  }
+  
+  .container-item{
+    margin-left: 0px;
+    margin-right: 0px;
+    flex: 0 0 50%;
+  }
+
+  .container-item + .container-item{
+    margin-top: 0;
+  }
+  
+}
+
 #container-contato {
   text-align: center;
 }
@@ -365,7 +430,6 @@ footer a {
   border: none;
   font-size: 30px;
   font-weight: bold;
-
 }
 
 @media (min-width: 700px) {
