--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,8 @@ section:nth-child(odd) {
 #container-menu .menu-hamburguer-item .menu-link:hover,
 #container-menu #menu-logo:hover,
 footer a:hover,
-.title-card a:hover,
-#contato a:hover, .container-accordion li a:hover {
+#contato a:hover,
+.container-accordion li a:hover {
   color: #707070;
 }
 
@@ -269,6 +269,11 @@ footer a:hover,
   align-items: center;
   background: var(--bg-cards);
   padding: 40px 30px;
+  border-radius: 15px;
+}
+
+.img-card {
+  border-radius: 10px;
 }
 
 .container-card + .container-card {
@@ -280,9 +285,13 @@ footer a:hover,
   color: var(--color-text);
   font-family: 'Montserrat';
   margin: 25px 0;
-  background: var(--bg-color);
   padding: 10px 5px;
   transition: 0.1s color;
+  border-radius: 10px;
+}
+
+.title-card a:hover {
+  color: var(--bg-color);
 }
 
 .container-card .container-infos {
@@ -299,8 +308,8 @@ footer a:hover,
 .container-card .container-infos strong {
   color: var(--color-text);
   font-family: 'Montserrat';
-  background: var(--bg-color);
   padding: 10px 5px;
+  border-radius: 10px;
 }
 
 @media (min-width: 629px) {
@@ -313,67 +322,66 @@ footer a:hover,
   }
 }
 
-#container-educacao{
+#container-educacao {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.educacao{
+.educacao {
   display: flex;
   flex-direction: column;
 }
 
-.container-item{
+.container-item {
   margin-left: 30px;
   margin-right: 30px;
   flex: 0 0 calc(100% - 60px);
 }
 
-.container-item .accordion-title{
+.container-item .accordion-title {
   color: var(--color-text);
   font-family: 'Montserrat';
   font-size: var(--fs-text-1);
   margin-bottom: 24px;
 }
 
-.container-item + .container-item{
+.container-item + .container-item {
   margin-top: 35px;
 }
 
-
-.container-accordion li + li{
+.container-accordion li + li {
   margin-top: 24px;
 }
 
-.container-accordion li,.container-accordion li a{
+.container-accordion li,
+.container-accordion li a {
   color: var(--color-text);
   font-family: 'Raleway';
   font-size: var(--fs-text-2);
-  transition: .1s color;
+  transition: 0.1s color;
   line-height: 1.4;
 }
 
-@media (min-width:900px){
-  .educacao{
+@media (min-width: 900px) {
+  .educacao {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin: 0 30px;
     gap: 30px;
   }
-  
-  .container-item{
+
+  .container-item {
     margin-left: 0px;
     margin-right: 0px;
     flex: 0 0 50%;
   }
 
-  .container-item + .container-item{
+  .container-item + .container-item {
     margin-top: 0;
   }
-  
 }
 
 #container-contato {
